add welcome pages

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,10 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
 
+    globals:
+        year: 2023
+        endDate: 'March 15, 2023 23:59'
+
 when@test:
     twig:
         strict_variables: true
