--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,8 +22,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/welcome/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/(%app.supported_locales%)/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/$, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: ROLE_NOBODY }
 
 when@test:
     security:
