--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,12 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            form_login:
+                login_path: login
+                check_path: login
+#                enable_csrf: true
+            logout:
+                path: logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -29,6 +35,8 @@ security:
         - { path: ^/(%app.supported_locales%)/registration/new/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/welcome/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/(%app.supported_locales%)/login/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/logout/?$, roles: PUBLIC_ACCESS }
         - { path: ^/$, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: ROLE_NOBODY }
 
