--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/(%app.supported_locales%)/contestants/ega/female/edit/?$, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/contestants/ega/male/edit/?$, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/contestants/messe/female/edit/?$, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/contestants/messe/male/edit/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/registration/new/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/welcome/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/?$, roles: PUBLIC_ACCESS }
