--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,7 +36,10 @@ security:
         - { path: ^/(%app.supported_locales%)/contestants/ega/male/edit/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/contestants/messe/female/edit/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/contestants/messe/male/edit/?$, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/registration/\d+/?$, methods: POST, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/registration/new/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/(%app.supported_locales%)/registration/edit/?$, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/registration/edit/password/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/welcome/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/login/?$, roles: PUBLIC_ACCESS }
