add invoice generation
First, it is only shown in admin overview. Later, we also want to send it out to participants by mail.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,7 @@ security:
         - { path: ^/(%app.supported_locales%)/admin/?$, roles: ROLE_ADMIN }
         - { path: ^/(%app.supported_locales%)/admin/ega/?$, roles: ROLE_ADMIN }
         - { path: ^/(%app.supported_locales%)/admin/messe/?$, roles: ROLE_ADMIN }
+        - { path: ^/(%app.supported_locales%)/invoice/\d+/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/contestants/ega/female/edit/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/contestants/ega/male/edit/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/contestants/messe/female/edit/?$, roles: ROLE_USER }
