add reset-password feature

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
         "symfony/yaml": "6.2.*",
+        "symfonycasts/reset-password-bundle": "^1.17",
         "tecnickcom/tcpdf": "^6.6",
         "twig/cssinliner-extra": "^3.5",
         "twig/extra-bundle": "^2.12|^3.0",
