--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,6 +46,10 @@ security:
         - { path: ^/(%app.supported_locales%)/registration/new/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/registration/edit/?$, roles: ROLE_USER }
         - { path: ^/(%app.supported_locales%)/registration/edit/password/?$, roles: ROLE_USER }
+        - { path: ^/(%app.supported_locales%)/reset-password/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/(%app.supported_locales%)/reset-password/check-email/?$, roles: PUBLIC_ACCESS }
+        - { path: ^/(%app.supported_locales%)/reset-password/reset$, roles: PUBLIC_ACCESS }
+        - { path: ^/(%app.supported_locales%)/reset-password/reset/.+$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/welcome/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/?$, roles: PUBLIC_ACCESS }
         - { path: ^/(%app.supported_locales%)/login/?$, roles: PUBLIC_ACCESS }
