--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.supported_locales: 'de|en'
-    app.is_active: true
+    app.is_active: false
     app.year: 2024
     app.limit.messe: 600
     app.limit.ega: 400
