--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,10 +5,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.supported_locales: 'de|en'
-    app.is_active: false
+    app.is_active: true
     app.year: 2025
-    app.limit.messe: 500
-    app.limit.ega: 350
+    app.limit.messe: 600
+    app.limit.ega: 400
 
 services:
     # default configuration for services in *this* file
